--- a/package.json
+++ b/package.json
@@ -6,5 +6,14 @@
   "repository": "git@github.com:boyeborg/fetch-deploy-hook-action.git",
   "author": "Boye Borg <boye.borg@icloud.com>",
   "license": "MPL-2.0",
-  "private": false
+  "private": false,
+  "scripts": {
+    "build": "ncc build index.js -o dist"
+  },
+  "devDependencies": {
+    "@zeit/ncc": "^0.20.5"
+  },
+  "dependencies": {
+    "@actions/core": "^1.2.0"
+  }
 }
